# SSG

./: .gitignore  GetGEOSampleSheet.py  README.md  gdc_idats.ipynb  gdc_sample_sheet.ipynb  geo.ipynb  geo_champ.ipynb  geo_data.ipynb  geo_normalized.ipynb  geo_pheno.ipynb  geo_phenotype.ipynb  pyproject.toml  rename.py  requirements.txt  unzip.py
